# project2_asaifnoorian

./: .gitignore  Citations.md  README.md  main.cpp
gui_qt/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  main_qt.cpp
include/: card.h  deck.h  evaluator.h  game.h  hand.h  player.h
src/: deck.cpp  evaluator.cpp  game.cpp  hand.cpp
